--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   width: 100%;
   height: 100%;
   padding: 0;
-  margin: 0;
+  margin: 40px;
 }
 
 main {
@@ -18,7 +18,7 @@ main {
 
 h1 {
   font-weight: bold;
-  color: rgb(1, 1, 1);
+  color: rgb(0, 0, 0);
   font-size: 40px;
   margin-bottom: 40px;
 }
@@ -53,7 +53,6 @@ header {
   align-items: center;
   justify-content: center;
   color: rgb(0, 0, 0);
-  margin-top: 40px;
 }
 
 label  { 
@@ -69,7 +68,7 @@ input {
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
-  border: 2px solid rgb(3, 3, 3);
+  border: 2px solid rgb(0, 0, 0);
   border-radius: 4px;
 }
 
@@ -80,4 +79,94 @@ input {
   height: 919px;
   flex-direction: column;
   background-image: url("../images/nature.png");
+  background-position: center;
+  margin-top: 16px;
 } 
+
+#surname-invitation {
+  display: flex;
+  flex-direction: column;
+  font-weight: normal;
+  font-family: 'Pinyon Script', serif;
+  text-shadow: 4px 4px 4px #aaa;
+  color: rgb(255, 255, 255);
+  font-size: 82px;
+}
+
+#textBlock {
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 260px;
+  font-weight: bold;
+  font-family: DM Sans;
+  font-size: 24px;
+  font-variant-caps: titling-caps;
+ 
+}
+
+#names {
+  display: flex;
+  flex-direction: row;
+  font-weight: normal;
+  font-family: 'Pinyon Script', serif;
+  text-shadow: 4px 4px 4px #aaa;
+  color: rgb(255, 255, 255);
+  font-size: 94px;
+  justify-content: center;
+  align-items: center;
+}
+
+#bride-name-invitation {
+margin-right: 40px;
+}
+
+
+span {
+  display: flex;
+  flex-direction: column;
+  font-weight: normal;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(255, 255, 255);
+  font-size: 16px;
+  justify-content: center;
+  align-items: center;
+  margin-right: 32px;
+}
+
+#appointment {
+  display: flex;
+  flex-direction: row;
+  margin-top: 40px;
+  font-weight: normal;
+  color:  #F4D975;
+  font-size: 16px;
+  margin-top: 24px;
+}
+#wedding-date {
+  margin-right: 40px;
+}
+#venue {
+  margin-top: 40px;
+  font-weight: normal;
+  color:  #F4D975;
+  font-size: 16px;
+  margin-top: 60px;
+  justify-content: center;
+  align-items: center;
+}
+
+#save {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-weight: normal;
+  color: rgb(255, 255, 255);
+  font-size: 16px;
+  margin-top: 0px;
+}
+
+
